@@ -10,8 +10,13 @@ Version 3.4b2
   percentage is only reported as 0% or 100% if they are truly 0 or 100, and
   are rounded otherwise.  Fixes `issue 41` and issue 70`.
 
+- The precision of reported coverage percentages can be set with the
+  ``[report] precision`` config file setting.  Default is still 0.  Completes
+  ``issue 16``.
+
 .. _issue 70: http://bitbucket.org/ned/coveragepy/issue/70/text-report-and-html-report-disagree-on-coverage
 .. _issue 41: http://bitbucket.org/ned/coveragepy/issue/41/report-says-100-when-it-isnt-quite-there
+.. _issue 16: http://bitbucket.org/ned/coveragepy/issue/16/allow-configuration-of-accuracy-of-percentage-totals
 
 
 Version 3.4b1 --- 21 August 2010
